--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,6 +25,13 @@
 							</td>
 							<td><%=link_to book.title,book_path(book.id) %></td>
 							<td><%= book.body %></td>
+							<td>
+								<%= render 'favorites/favorite',book: book %>
+							</td>
+							<td>
+								コメント数: 
+								<%= book.book_comments.count %>
+							</td>
 							</tr>
 					<% end %>
 				</table>
