--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -11,10 +11,17 @@
 		</td><td>
 		  <%= user.introduction %>
 		</td></tr>
-		<tr><td>
+		<td>
 			<% if user == current_user %>
 				<%= link_to edit_user_path(user), class:"btn btn-outline-secondary btn-block" do %><i class="fas fa-wrench"></i>
 				<% end %>
+
+			<% else %>
+				<% if current_user.following?(user) %>
+		  		<%= link_to 'フォロー外す',user_relationships_path(user.id), method: :delete, class: "btn btn-success"%>
+		  	<% else %>
+		  		<%= link_to 'フォローする',user_relationships_path(user.id), method: :post, class: "btn btn-primary"%>
+		  	<% end %>
 			<% end %>
-	  </td></tr>
+	  </td>
 	</table>
