--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -26,10 +26,12 @@
 							<td><%=link_to book.title,book_path(book.id) %></td>
 							<td><%= book.body %></td>
 							<td>
-								<%= render 'favorites/favorite',book: book %>
+								<div id="fav_<%= book.id %>">
+									<%= render partial:'favorites/favorite', locals: {book: book} %>
+								</div>
 							</td>
 							<td>
-								コメント数: 
+								コメント数:
 								<%= book.book_comments.count %>
 							</td>
 							</tr>
